Change heading color from secondary to primary

--- a/privacy.html
+++ b/privacy.html
@@ -51,7 +51,7 @@
 
         /* --- CONTENIDO DE LA POLÍTICA --- */
         h2 {
-            color: var(--color-secundario);
+            color: var(--color-primario);
             border-bottom: 2px solid var(--color-borde);
             padding-bottom: 5px;
             margin-top: 30px;
