Revise and update terms and conditions sections

--- a/terms.html
+++ b/terms.html
@@ -125,84 +125,57 @@
 
         <section id="introduccion">
             <p><strong>Última Actualización:</strong> 28 de noviembre de 2025</p>
-            <p>Estos Términos y Condiciones (en adelante, "los Términos") rigen el uso de la aplicación móvil **Info Docente** (en adelante, "la Aplicación"). Al crear una cuenta o utilizar la Aplicación, el usuario acepta plenamente estas condiciones.</p>
-        </section>
-
-        <section id="aceptacion">
-            <h2>1. Aceptación de los Términos</h2>
-            <p>La creación de una cuenta o el uso continuado de la Aplicación constituye la aceptación total de los Términos aquí descritos, incluyendo las políticas de privacidad y aviso legal asociadas.</p>
+            <p>Estos Términos y Condiciones (en adelante, "los Términos") rigen el uso de la aplicación móvil **Info Docente**. Al crear una cuenta o utilizar la Aplicación, el usuario acepta plenamente estas condiciones.</p>
         </section>
 
         <section id="registro">
-            <h2>2. Registro de Usuario</h2>
-            <p>Para utilizar la Aplicación, el usuario debe proporcionar una dirección de correo electrónico válida y una contraseña. Opcionalmente, el usuario puede proporcionar credenciales de acceso a portales oficiales (como SÉNECA) para la lectura de información.</p>
+            <h2>1. Registro de Usuario y Credenciales</h2>
+            <p>Para utilizar la Aplicación, el usuario debe proporcionar un email y una contraseña para la App, y las **credenciales de acceso** (usuario y contraseña) a los portales de la Consejería (ej. Portal Docente), las cuales son **necesarias** para acceder a la funcionalidad principal de consulta de datos de servicio.</p>
         </section>
 
         <section id="acceso-servicios-externos">
-            <h2>3. Acceso a Servicios Externos</h2>
+            <h2>2. Acceso a Servicios Externos y Uso de Credenciales</h2>
             <p>
-            La Aplicación utiliza las credenciales proporcionadas por el usuario para leer y mostrar información personal proveniente de portales oficiales.
+            La Aplicación utiliza las credenciales proporcionadas por el usuario únicamente para **consultar, recopilar y presentar** la información personal de servicio proveniente de portales oficiales de la Junta de Andalucía.
             </p>
             <ul>
-                <li>**Limitación:** Info Docente actúa únicamente como lector de datos. **No modifica, edita ni realiza acciones** en nombre del usuario en los portales oficiales.</li>
-                <li>**Responsabilidad de Credenciales:** El usuario es el único responsable de la seguridad y confidencialidad de las credenciales que ingrese.</li>
+                <li>**Función Limitada:** Info Docente actúa estrictamente como **lector de datos**. No puede ni intentará modificar, editar, ni realizar ninguna acción o trámite en nombre del usuario en los portales oficiales.</li>
+                <li>**Dependencia de la Fuente:** El desarrollador no es responsable de la exactitud, errores o retrasos en la información obtenida de los portales externos, ya que esta depende de la fuente oficial.</li>
             </ul>
         </section>
 
         <section id="publicidad-analitica">
-            <h2>4. Publicidad y Analítica</h2>
-            <p>El usuario acepta que datos de uso anonimizados y agregados podrán ser utilizados para fines de analítica y optimización de la Aplicación, y para la inserción de publicidad no invasiva.</p>
+            <h2>3. Publicidad y Analítica</h2>
+            <p>El usuario acepta que datos de uso anonimizados y agregados podrán ser utilizados para fines de analítica y la inserción de publicidad no invasiva.</p>
         </section>
 
         <section id="acciones-prohibidas">
-            <h2>5. Acciones Prohibidas</h2>
-            <p>El uso de la Aplicación para las siguientes actividades está estrictamente prohibido:</p>
-            <ul>
-                <li>Uso ilegal, fraudulento o contrario a la buena fe.</li>
-                <li>Extracción masiva de datos (*data scraping*) o minería de información.</li>
-                <li>Ingeniería inversa, descompilación o intento de obtener el código fuente.</li>
-                <li>Acceso, alteración o intento de obtener datos de otros usuarios.</li>
-                <li>Copiar, distribuir o explotar la Aplicación sin permiso expreso.</li>
-            </ul>
-        </section>
-
-        <section id="suspension-cuenta">
-            <h2>6. Suspensión y Terminación</h2>
-            <p>El desarrollador se reserva el derecho de suspender o bloquear la cuenta de cualquier usuario que incumpla gravemente estos Términos o haga un uso indebido de la Aplicación, sin previo aviso.</p>
-        </section>
-
-        <section id="limitacion-responsabilidad">
-            <h2>7. Limitación de Responsabilidad</h2>
-            <p>
-            El desarrollador no se responsabiliza por:
-            </p>
-            <ul>
-                <li>Errores, inexactitudes o retrasos en la información obtenida de portales externos.</li>
-                <li>Fallos en el sistema, interrupciones o indisponibilidad temporal del servicio.</li>
-                <li>Decisiones personales, profesionales o académicas tomadas por el usuario basándose en la información de la Aplicación.</li>
-            </ul>
-        </section>
-
-        <section id="disclaimer">
-            <h2>8. Descargo de Responsabilidad (Relación Oficial)</h2>
-            <p>
-            Info Docente **no es una aplicación oficial** y no tiene ninguna afiliación, patrocinio o respaldo por parte de la **Junta de Andalucía** ni de ningún organismo público. La Aplicación proporciona un acceso informativo y de ayuda a la organización personal, y **no sustituye los procedimientos ni la documentación oficial**.
-            </p>
+            <h2>4. Acciones Prohibidas</h2>
+            <p>El uso de la Aplicación para actividades ilegales, fraude, extracción masiva de datos (*data scraping*), ingeniería inversa, o acceso a datos de terceros está estrictamente prohibido.</p>
         </section>
 
         <section id="eliminacion-cuenta">
-            <h2>9. Eliminación de Cuenta</h2>
+            <h2>5. Eliminación de Cuenta</h2>
             <p>Los usuarios pueden solicitar la eliminación de su cuenta y de todos sus datos asociados enviando un correo electrónico a <strong><a href="mailto:infodocente@gmail.com">infodocente@gmail.com</a></strong>. La eliminación se realizará en un plazo razonable.</p>
         </section>
 
-        <section id="cambios-terminos">
-            <h2>10. Modificaciones</h2>
-            <p>El desarrollador podrá modificar estos Términos en cualquier momento. Los usuarios serán notificados de cualquier cambio significativo a través de la Aplicación o por correo electrónico.</p>
+        <section id="limitacion-responsabilidad">
+            <h2>6. Limitación de Responsabilidad</h2>
+            <p>
+            El desarrollador no se responsabiliza por: errores en datos externos; fallos en el sistema o interrupciones del servicio; o decisiones tomadas por el usuario basándose en la información mostrada por la Aplicación.
+            </p>
+        </section>
+
+        <section id="disclaimer">
+            <h2>7. Descargo de Responsabilidad (Relación Oficial)</h2>
+            <p>
+            Info Docente **no es una aplicación oficial** y no tiene ninguna afiliación con la Junta de Andalucía. Proporciona un acceso informativo y de ayuda a la organización personal, y **no sustituye los procedimientos oficiales**.
+            </p>
         </section>
 
         <section id="ley-aplicable">
-            <h2>11. Ley Aplicable</h2>
-            <p>Estos Términos y Condiciones se rigen e interpretan de acuerdo con la **ley española**.</p>
+            <h2>8. Ley Aplicable</h2>
+            <p>Estos Términos se rigen e interpretan de acuerdo con la **ley española**.</p>
         </section>
 
         <footer>
