Update privacy policy link in legal.html

--- a/legal.html
+++ b/legal.html
@@ -130,7 +130,7 @@
         <section id="proteccion-datos">
             <h2>2. Protección de Datos</h2>
             <p>
-            El tratamiento de los datos personales, incluyendo las credenciales y datos sensibles, se rige por la <a href="[URL_A_POLITICA_PRIVACIDAD]">Política de Privacidad</a>, la cual se debe consultar para obtener información detallada sobre su procesamiento.
+            El tratamiento de los datos personales, incluyendo las credenciales y datos sensibles, se rige por la <a href="https://fcazalladev.github.io/infodocente/privacy.html">Política de Privacidad</a>, la cual se debe consultar para obtener información detallada sobre su procesamiento.
             </p>
         </section>
 
